integration/snapshots/query-witness-unwitnessable-attribute_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query -c coverage --coverage-source verus-sst=../../../duvet/src/query/parsers/verus_sst/testdata/vacuity
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 3 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 3 references 
  
Coverage: ✗ FAIL

  Coverage reports checked: 0
  Executed tests: 0
  Executed implementations: 0
  Successful correlations: 0
  Failed correlations: 0
  Tests with no implementation: 0
  Unwitnessed tests: 0
  Unwitnessable targets: 1

  × Unwitnessable test annotation target
    ╭─[runtime.rs:7:5]
  6 │     
  7 │ ╭─▶ //= spec.md#section-1
  8 │ │   //= type=test
  9 │ ├─▶ //# This MUST do the thing
    · ╰──── Annotation whose resolved target is not code
 10 │     #[test]
    ╰────
  help: This annotation's resolved target (line 10) is a line matching the
        source's non-target pattern:
            #[test]
        No act of checking can ever be about that line, in any run — the
        annotation MUST be the last comment block above the code it targets
        (design/witness/spec.md §1.1). Move the annotation directly above its
        code (below any attribute or interleaved comment), so resolution lands
        on the code itself.

Advice: 
  ☞ Related context for:
  │  Unwitnessable test annotation target
    ╭─[runtime.rs:10:1]
  9 │ //# This MUST do the thing
 10 │ #[test]
    · ───┬───
    ·    ╰── Resolved target line (not code)
 11 │ fn test_do_thing() {
    ╰────



Overall: ✗ FAIL
