integration/snapshots/query-witness-verus-discharge_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query -c coverage --coverage-source verus-sst=../../../duvet/src/query/parsers/verus_sst/testdata/vacuity --verbose
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 2 sources 
     Parsing annotations
      Parsed 3 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 3 references 
     Running test execution correlation check...
    Coverage model: 0 file(s) language-aware (verified), 1 file(s) degraded — no classifier (verified)
              degraded (no classifier, verified): vacuity.rs
  
Coverage: ✓ PASS

  Coverage reports checked: 1
  Executed tests: 1
  Executed implementations: 1
  Successful correlations: 1
  Failed correlations: 0
  Tests with no implementation: 0
  Unwitnessed tests: 0

  ☞ Successful correlation
    ╭─[vacuity.rs:19:5]
 18 │     
 19 │ ╭─▶ //= spec.md#add-one
 20 │ │   //= type=test
 21 │ ├─▶ //# Adding one MUST produce the successor
    · ╰──── Test annotation
 22 │     pub proof fn honest_proof()
    ╰────
  help: discharged by vacuity::honest_proof (consulted)

Advice: 
  ☞ Related context for:
  │  Successful correlation
   ╭─[vacuity.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#add-one
 6 │ ├─▶ //# Adding one MUST produce the successor
   · ╰──── Executed implementation
 7 │     pub open spec fn spec_add_one(x: int) -> int {
   ╰────

  ☞ Executed annotations

Advice: 
  ☞ Related context for:
  │  Executed annotations
    ╭─[vacuity.rs:19:5]
 18 │     
 19 │ ╭─▶ //= spec.md#add-one
 20 │ │   //= type=test
 21 │ ├─▶ //# Adding one MUST produce the successor
    · ╰──── Executed test
 22 │     pub proof fn honest_proof()
    ╰────

Advice: 
  ☞ Related context for:
  │  Executed annotations
   ╭─[vacuity.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#add-one
 6 │ ├─▶ //# Adding one MUST produce the successor
   · ╰──── Executed implementation
 7 │     pub open spec fn spec_add_one(x: int) -> int {
   ╰────



Overall: ✓ PASS
