integration/snapshots/report-ignore-whitespace.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [Testing](my-spec.md)
  SECTION: [Testing](#testing)
    TEXT[!SHOULD,implementation]: This      SHOULD         ignore        whitespace.
