integration/snapshots/report-require-both-flags.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [Input Validation](my-spec.md)
  SECTION: [Input Validation](#input-validation)
    TEXT[!MUST,implementation,test]: The system MUST validate all input parameters before processing.
