integration/snapshots/report-require-citations-disabled.snap
---
source: xtask/src/tests.rs
expression: snapshot
---
SPECIFICATION: [Input Validation](my-spec.md)
  SECTION: [Input Validation](#input-validation)
    TEXT[!MUST]: The system MUST validate all input parameters before processing.
